[gd_scene load_steps=4 format=3 uid="uid://4uq6t750w1kx"]

[ext_resource type="Script" path="res://scenes/core/first_time_setup.gd" id="2_ni6y4"]
[ext_resource type="FontFile" uid="uid://b2l417p525crd" path="res://extern/MaterialSymbolsRounded[FILL,GRAD,opsz,wght].ttf" id="3_2m35f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jre7p"]
bg_color = Color(0.109804, 0.129412, 0.156863, 1)

[node name="First Time Setup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ni6y4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jre7p")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.239228
anchor_top = 0.0832667
anchor_right = 0.757978
anchor_bottom = 0.127778
offset_left = 202.012
offset_right = -202.012
grow_horizontal = 2
text = "Where is your Beat Saber Install? (Select the folder your Maps Folder is contained in.)"
metadata/_edit_use_anchors_ = true

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
initial_position = 2
size = Vector2i(876, 556)
borderless = true
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.00078125
anchor_top = 0.844444
anchor_right = 1.0
anchor_bottom = 0.988889
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Confirm" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
text = "Let's Go!"

[node name="DirectoryManager" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.266667
anchor_right = 0.95
anchor_bottom = 0.355556
offset_top = -1.52588e-05
theme_type_variation = &"DarkPanelContainer"
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="DirectoryManager"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="DirectoryManager/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "user://"
metadata/_edit_use_anchors_ = true

[node name="OpenFileManagerButton" type="Button" parent="DirectoryManager/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2m35f")
theme_override_font_sizes/font_size = 24
text = "folder"
metadata/_edit_use_anchors_ = true

[node name="UseAppdataButton" type="Button" parent="DirectoryManager/HBoxContainer"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
text = "Use Appdata Instead"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 384.0
offset_right = 1216.0
offset_bottom = 576.0
text = "As of the time that you're running this, this mapper cannot currently be used to Map songs. In the nature of keeping everything free and open source, I've left this publiclly accessible, but as it stands right now, this is a glorified shitty map viewer. Just use ChroMapper right now and check back in a few months if you want to make maps with this thing. Or keep an eye peeled at the BSMG Mapping Discussion channel, as I'll be posting updates there."
autowrap_mode = 3

[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="pressed" from="HBoxContainer/Confirm" to="." method="_on_button_pressed"]
[connection signal="pressed" from="DirectoryManager/HBoxContainer/OpenFileManagerButton" to="." method="_on_open_file_manager_button_pressed"]
[connection signal="pressed" from="DirectoryManager/HBoxContainer/UseAppdataButton" to="." method="_on_use_appdata_button_pressed"]
